# mmath

./: CMakeLists.txt
src/mmath/private/: coldet.cpp  geometry.cpp  matrix.cpp  projection.cpp  quat.cpp  vector.cpp
src/mmath/public/: coldet.h  geometry.h  matrix.h  projection.h  quat.h  vector.h
